--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LoadMaster Scale Reader - Functional Style</title>
+    <title>LoadMaster Scale Reader</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -91,230 +91,173 @@
     </div>
 
     <script>
-      // State management using a pure function to create initial state
-      const createInitialState = () => ({
-        port: null,
-        reader: null,
-        isReading: false,
-        weight: 0,
-        unit: 'kg',
-        stable: false,
-        status: '',
-        isError: false,
-        logs: [],
-      });
+      class LoadMasterScaleReader {
+        constructor() {
+          this.port = null;
+          this.reader = null;
+          this.isReading = false;
+        }
 
-      // Pure function to create serial port config
-      const createSerialConfig = () => ({
-        baudRate: 9600,
-        dataBits: 8,
-        stopBits: 1,
-        parity: 'none',
-        flowControl: 'none',
-      });
-
-      // Pure functions for data parsing
-      const parseWeightData = (text) => {
-        console.log({ text });
-        const weightRegex = /ST,GS,[\+\-]\s*(\d+\.?\d*)kg/;
-        const weightMatch = text.match(weightRegex);
-
-        return weightMatch
-          ? {
-              weight: parseFloat(weightMatch[1]),
-              unit: 'kg',
-              stable: text.startsWith('ST'),
-              raw: text,
-            }
-          : {
-              weight: 0,
-              unit: 'kg',
-              stable: false,
-              raw: text,
-            };
-      };
-
-      // Pure function to decode bytes to text
-      const decodeBytes = (data) => new TextDecoder().decode(data).trim();
-
-      // Pure functions for UI updates
-      const createLogEntry = (message) => ({
-        timestamp: new Date().toLocaleTimeString(),
-        message,
-      });
-
-      const updateButtonStates = (state) => ({
-        connectBtn: !state.port && navigator.serial,
-        startReadingBtn: state.port && !state.isReading,
-        stopReadingBtn: state.isReading,
-        disconnectBtn: state.port,
-      });
-
-      // Side effect functions (impure by nature, but isolated)
-      const updateDOM = {
-        weight: (weight, unit, stable) => {
-          const weightDisplay = document.getElementById('weightDisplay');
-          weightDisplay.textContent = `${weight} ${unit}${
-            stable ? '' : ' (unstable)'
-          }`;
-        },
-
-        status: (message, isError) => {
-          const statusDisplay = document.getElementById('statusDisplay');
-          statusDisplay.textContent = message;
-          statusDisplay.className = 'status ' + (isError ? 'error' : 'success');
-        },
-
-        log: (entry) => {
-          const logElement = document.getElementById('log');
-          const div = document.createElement('div');
-          div.textContent = `${entry.timestamp}: ${entry.message}`;
-          logElement.appendChild(div);
-          logElement.scrollTop = logElement.scrollHeight;
-        },
-
-        buttons: (states) => {
-          Object.entries(states).forEach(([id, enabled]) => {
-            document.getElementById(id).disabled = !enabled;
-          });
-        },
-      };
-
-      // Main application logic using async/await and composition
-      const ScaleReader = (() => {
-        let state = createInitialState();
-
-        const updateState = (newState) => {
-          state = { ...state, ...newState };
-          return state;
-        };
-
-        // Connection management
-        const connect = async () => {
+        async connect() {
           try {
-            const port = await navigator.serial.requestPort();
-            await port.open(createSerialConfig());
-
-            updateState({ port });
+            this.port = await navigator.serial.requestPort();
+            await this.port.open({
+              baudRate: 9600,
+              dataBits: 8,
+              stopBits: 1,
+              parity: 'none',
+              flowControl: 'none',
+            });
             return true;
           } catch (error) {
             throw error;
           }
-        };
+        }
 
-        const disconnect = async () => {
-          if (state.port) {
-            await state.port.close();
-            updateState(createInitialState());
-          }
-        };
-
-        // Reading management
-        const processReading = async (reader) => {
+        async startReading(callback) {
           try {
-            const { value, done } = await reader.read();
-            if (done) return null;
+            this.isReading = true;
+            this.reader = this.port.readable.getReader();
 
-            const text = decodeBytes(value);
-            return parseWeightData(text);
-          } catch (error) {
-            throw error;
-          }
-        };
-
-        const startReading = async () => {
-          updateState({ isReading: true });
-          const reader = state.port.readable.getReader();
-          updateState({ reader });
-
-          while (state.isReading) {
-            try {
-              const data = await processReading(reader);
-              if (!data) break;
-
-              updateDOM.weight(data.weight, data.unit, data.stable);
-            } catch (error) {
-              updateDOM.status(`Reading error: ${error.message}`, true);
-              updateDOM.log(createLogEntry(`Error: ${error.message}`));
-              break;
+            while (this.isReading) {
+              const { value, done } = await this.reader.read();
+              if (done) {
+                break;
+              }
+              // Parse the received data according to LoadMaster format
+              const weightData = this.parseWeightData(value);
+              callback(null, weightData);
             }
-          }
 
-          reader.releaseLock();
-        };
-
-        const stopReading = async () => {
-          updateState({ isReading: false });
-          if (state.reader) {
-            await state.reader.cancel();
-          }
-        };
-
-        return {
-          connect,
-          disconnect,
-          startReading,
-          stopReading,
-        };
-      })();
-
-      // Event handlers
-      document
-        .getElementById('connectBtn')
-        .addEventListener('click', async () => {
-          try {
-            await ScaleReader.connect();
-            updateDOM.status('Connected to LoadMaster scale');
-            updateDOM.log(createLogEntry('Connected to LoadMaster scale'));
-            updateDOM.buttons(
-              updateButtonStates({ port: true, isReading: false })
-            );
+            this.reader.releaseLock();
           } catch (error) {
-            updateDOM.status(`Connection failed: ${error.message}`, true);
-            updateDOM.log(createLogEntry(`Error: ${error.message}`));
+            callback(error);
+          }
+        }
+
+        parseWeightData(data) {
+          // Convert received bytes to string
+          const decoder = new TextDecoder();
+          const text = decoder.decode(data);
+          // console.log(JSON.stringify(text));
+
+          // Parse according to LoadMaster format (section 5.1-5.2 of manual)
+          // Example format: ST,GS,+ 123.45 kg
+          //1.39kg\r\nST,GS,+ 1.39kg\r\nST,GS,+
+          const weightRegex = /ST,GS,[\+\-]\s*(\d+\.?\d*)kg/;
+          const weightMatch = text.match(weightRegex);
+
+          if (match) {
+            return {
+              weight: parseFloat(match[1]),
+              unit: 'kg',
+              stable: text.startsWith('ST'), // ST means stable
+              raw: text,
+            };
+          }
+
+          // If no match found, return zero weight
+          return {
+            weight: 0,
+            unit: 'kg',
+            stable: false,
+            raw: text,
+          };
+        }
+
+        async stopReading() {
+          this.isReading = false;
+          if (this.reader) {
+            await this.reader.cancel();
+          }
+        }
+
+        async disconnect() {
+          if (this.port) {
+            await this.port.close();
+            this.port = null;
+          }
+        }
+      }
+
+      // UI Controller
+      const scale = new LoadMasterScaleReader();
+      const connectBtn = document.getElementById('connectBtn');
+      const startReadingBtn = document.getElementById('startReadingBtn');
+      const stopReadingBtn = document.getElementById('stopReadingBtn');
+      const disconnectBtn = document.getElementById('disconnectBtn');
+      const weightDisplay = document.getElementById('weightDisplay');
+      const statusDisplay = document.getElementById('statusDisplay');
+      const logElement = document.getElementById('log');
+
+      function updateStatus(message, isError = false) {
+        statusDisplay.textContent = message;
+        statusDisplay.className = 'status ' + (isError ? 'error' : 'success');
+      }
+
+      function log(message) {
+        const entry = document.createElement('div');
+        entry.textContent = `${new Date().toLocaleTimeString()}: ${message}`;
+        logElement.appendChild(entry);
+        logElement.scrollTop = logElement.scrollHeight;
+      }
+
+      connectBtn.addEventListener('click', async () => {
+        try {
+          await scale.connect();
+          updateStatus('Connected to LoadMaster scale');
+          log('Connected to LoadMaster scale');
+          connectBtn.disabled = true;
+          startReadingBtn.disabled = false;
+          disconnectBtn.disabled = false;
+        } catch (error) {
+          updateStatus(`Connection failed: ${error.message}`, true);
+          log(`Error: ${error.message}`);
+        }
+      });
+
+      startReadingBtn.addEventListener('click', async () => {
+        startReadingBtn.disabled = true;
+        stopReadingBtn.disabled = false;
+
+        scale.startReading((error, data) => {
+          if (error) {
+            updateStatus(`Reading error: ${error.message}`, true);
+            log(`Error: ${error.message}`);
+            return;
+          }
+          weightDisplay.textContent = `${data.weight} ${data.unit}`;
+          if (!data.stable) {
+            weightDisplay.textContent += ' (unstable)';
           }
         });
 
-      document
-        .getElementById('startReadingBtn')
-        .addEventListener('click', async () => {
-          updateDOM.buttons(
-            updateButtonStates({ port: true, isReading: true })
-          );
-          updateDOM.log(createLogEntry('Started continuous reading'));
-          await ScaleReader.startReading();
-        });
+        log('Started continuous reading');
+      });
 
-      document
-        .getElementById('stopReadingBtn')
-        .addEventListener('click', async () => {
-          await ScaleReader.stopReading();
-          updateDOM.buttons(
-            updateButtonStates({ port: true, isReading: false })
-          );
-          updateDOM.log(createLogEntry('Stopped continuous reading'));
-        });
+      stopReadingBtn.addEventListener('click', async () => {
+        await scale.stopReading();
+        startReadingBtn.disabled = false;
+        stopReadingBtn.disabled = true;
+        log('Stopped continuous reading');
+      });
 
-      document
-        .getElementById('disconnectBtn')
-        .addEventListener('click', async () => {
-          await ScaleReader.stopReading();
-          await ScaleReader.disconnect();
-          updateDOM.weight('--', 'kg', true);
-          updateDOM.status('Disconnected from scale');
-          updateDOM.log(createLogEntry('Disconnected from scale'));
-          updateDOM.buttons(
-            updateButtonStates({ port: false, isReading: false })
-          );
-        });
+      disconnectBtn.addEventListener('click', async () => {
+        await scale.stopReading();
+        await scale.disconnect();
+        weightDisplay.textContent = '-- kg';
+        updateStatus('Disconnected from scale');
+        log('Disconnected from scale');
+        connectBtn.disabled = false;
+        startReadingBtn.disabled = true;
+        stopReadingBtn.disabled = true;
+        disconnectBtn.disabled = true;
+      });
 
-      // Initial setup
+      // Check if Web Serial API is supported
       if (!navigator.serial) {
-        updateDOM.status(
-          'Web Serial API is not supported in this browser',
-          true
-        );
-        updateDOM.buttons({ connectBtn: false });
+        updateStatus('Web Serial API is not supported in this browser', true);
+        connectBtn.disabled = true;
       }
     </script>
   </body>
